[package]
name = "chroma"
version = "0.13.3"
edition = "2021"
description = "Client for Chroma, the AI-native cloud database."
license = "Apache-2.0"

[dependencies]
async-trait.workspace = true
backon = "1.5"
bon = "3.8.1"
murmur3.workspace = true
opentelemetry = { version = ">=0.27,<0.32", optional = true }
parking_lot.workspace = true
reqwest = { version = ">=0.13.0,<0.14.0", features = ["json", "charset", "system-proxy", "http2", "query"], default-features = false }
rust-stemmers = "1.2"
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio = { version = ">=1,<2", features = ["sync"] }
thiserror.workspace = true
tracing.workspace = true

chroma-api-types.workspace = true
chroma-error.workspace = true
chroma-types.workspace = true
futures-util = "0.3.31"

[features]
default = ["rustls", "ollama"]
native-tls = ["reqwest/default-tls", "reqwest/default"]
rustls = ["reqwest/rustls"]
ollama = []

[dev-dependencies]
clap.workspace = true
dotenvy = "0.15.7"
futures-util = "0.3.31"
biometrics = { path = "../../../blue/biometrics" }
biometrics_prometheus = { path = "../../../blue/biometrics_prometheus" }
sig_fig_histogram = { path = "../../../blue/sig_fig_histogram" }
guacamole = { version = "0.13", default-features = false }
utf8path = { path = "../../../blue/utf8path" }
rand.workspace = true
test-log = { version = "0.2.18", features = ["trace"] }
tokio.workspace = true
uuid.workspace = true
httpmock = "0.8.2"
