[package]
name = "chroma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
chroma-frontend = { workspace = true }
chroma-config = { workspace = true }
chroma-system = { workspace = true }
chroma-sqlite = { workspace = true }
chroma-segment = { workspace = true }
chroma-sysdb = { workspace = true }
chroma-types = { workspace = true }
chroma-log = { workspace = true }
colored = "3.0.0"
dialoguer = "0.11.0"
indicatif.workspace = true
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
webbrowser = "1.0.3"

[[bin]]
name = "chroma"
path = "src/main.rs"
