[package]
name = "chroma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.28", features = ["derive"] }
chroma-frontend = { workspace = true }
chroma-config = { workspace = true }
chroma-system = { workspace = true }
chroma-sqlite = { workspace = true }
chroma-segment = { workspace = true }
chroma-sysdb = { workspace = true }
chroma-types = { workspace = true }
chroma-log = { workspace = true }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
indicatif.workspace = true
rand = {workspace = true}
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
sqlx = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = "0.8.20"
webbrowser = "1.0.3"
strum = "0.27.1"
strum_macros = "0.27.1"
semver = "1.0.26"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[[bin]]
name = "chroma"
path = "src/main.rs"
