[package]
name = "chroma-error"
version = "0.6.0"
edition = "2021"
description = "Chroma-provided crate for errors returned from Chroma."
license = "Apache-2.0"
repository = "https://github.com/chroma-core/chroma"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
validator = { workspace = true, optional = true }
thiserror = { workspace = true }
http = { workspace = true, optional = true }

[features]
tonic = ["dep:tonic"]
sqlx = ["dep:sqlx"]
validator = ["dep:validator"]
http = ["dep:http"]
