[package]
name = "chroma-faults"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }

chroma-config = { workspace = true }
chroma-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
