[package]
name = "foundation-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "foundation_service"
path = "src/bin/foundation_service.rs"

[dependencies]
axum = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

chroma-error = { workspace = true, features = ["validator", "http"] }
chroma-system = { workspace = true }
chroma-tracing = { workspace = true, features = ["middleware"] }
chroma-types = { workspace = true }
frontend-core = { workspace = true }
