[workspace]
resolver = "2"
members = ["cli"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["rustls", "http2", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
open = "5"
home = "0.5"
toml = "0.8.20"
colored = "3.0.0"
dialoguer = "0.11.0"
