[package]
name = "chroma-frontend"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "frontend_service"
path = "src/bin/frontend_service.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
backon = { workspace = true }
tower = { version = "0.4.13", features = ["discover"] }
mdac = { workspace = true }
opentelemetry.workspace = true
validator = { workspace = true }
rust-embed = { workspace = true }

chroma-cache = { workspace = true }
chroma-config = { workspace = true }
chroma-distance = { workspace = true }
chroma-error = { workspace = true, features = ["validator"] }
chroma-log = { workspace = true }
chroma-memberlist = { workspace = true }
chroma-segment = { workspace = true }
chroma-sysdb = { workspace = true }
chroma-system = { workspace = true }
chroma-tracing = { workspace = true }
chroma-types = { workspace = true }
chroma-sqlite = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
chroma-types = { workspace = true, features = ["testing"] }
tempfile = { workspace = true }
random-port = "0.1.1"
worker = { workspace = true }
