[package]
name = "garbage_collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "garbage_collector_library"
path = "src/lib.rs"

[[bin]]
name = "garbage_collector_service"
path = "src/bin/garbage_collector_service.rs"

[[bin]]
name = "garbage_collector_tool"
path = "src/bin/garbage_collector_tool.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
humantime = { workspace = true }
opentelemetry = { workspace = true }
petgraph = { workspace = true }
base64 = { workspace = true }

chroma-config = { workspace = true }
chroma-error = { workspace = true }
chroma-system = { workspace = true }
chroma-types = { workspace = true }
chroma-sysdb = { workspace = true }
chroma-storage = { workspace = true }
chroma-blockstore = { workspace = true }
chroma-cache = { workspace = true }
chroma-index = { workspace = true }
chroma-segment = { workspace = true }
chroma-memberlist = { workspace = true }
chroma-tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-state-machine = "0.3"
proptest-derive = "0.3"
tokio-test = "0.4"
rand = { workspace = true }
itertools = { workspace = true }
tracing-test = { version = "0.2.5" }
tracing-subscriber = { workspace = true }
