[package]
name = "garbage_collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "garbage_collector_library"
path = "src/lib.rs"

[[bin]]
name = "garbage_collector_service"
path = "src/bin/garbage_collector_service.rs"

[[bin]]
name = "garbage_collector_tool"
path = "src/bin/garbage_collector_tool.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
humantime = { workspace = true }
opentelemetry = { workspace = true }
petgraph = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
sqlx = { workspace = true }
tracing-opentelemetry = { workspace = true }

chroma-config = { workspace = true }
chroma-error = { workspace = true }
chroma-log = { workspace = true }
chroma-segment = { workspace = true }
chroma-system = { workspace = true }
chroma-types = { workspace = true }
chroma-sysdb = { workspace = true }
chroma-storage = { workspace = true }
chroma-blockstore = { workspace = true }
chroma-cache = { workspace = true }
chroma-index = { workspace = true }
chroma-memberlist = { workspace = true }
chroma-tracing = { workspace = true }
chroma-jemalloc-pprof-server = { workspace = true }
s3heap = { workspace = true }
s3heap-service = { workspace = true }
wal3 = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-state-machine = "0.3"
proptest-derive = "0.3"
tokio-test = "0.4"
rand = { workspace = true }
itertools = { workspace = true }
tracing-test = { version = "0.2.5" }
